Bug 371963 - Menu File > Quit does not work
Summary: Menu File > Quit does not work
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-02 03:13 UTC by Christoph Feck
Modified: 2016-11-12 15:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2016-11-02 03:13:44 UTC
Closing the window works, but using menubar > File > Quit does not exit the application.

Version: today's master.
Comment 1 Burkhard Lück 2016-11-02 07:19:55 UTC
confirmed with master from today build from sources
Comment 2 Andreas Cord-Landwehr 2016-11-12 15:47:06 UTC
Git commit 7c9e0221cd4a6d9d58c7ee0c9bac32f4e06b40da by Andreas Cord-Landwehr.
Committed on 12/11/2016 at 15:43.
Pushed by cordlandwehr into branch 'master'.

Connect to correct application quit slot

M  +1    -1    src/kalzium.cpp

http://commits.kde.org/kalzium/7c9e0221cd4a6d9d58c7ee0c9bac32f4e06b40da