Connect to correct application quit slot

BUG: 371963